# BMO

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  debug_local_wrapper.py  deploy.py  docker-compose.yml  pyproject.toml  pytest.ini  template.env  test_deploy.py
docs/: adding_skills.md
src/BMO/: main.py  vertex_wrapper.py
src/BMO/agents/: base.py  coder.py  critic.py  researcher.py  schemas.py  writer.py
src/BMO/api/: app.py  routes.py  schemas.py
src/BMO/config/: settings.py
src/BMO/core/: llm.py  orchestrator.py
src/BMO/orchestrator/: planner.py  supervisor.py
src/BMO/scripts/: verify_agent.py  verify_routing.py  verify_skill.py
src/BMO/skills/: base.py  registry.py  registry_manifest.py
src/BMO/skills/collection/: system_ops.py  web_search.py
tests/: conftest.py  test_a2a_schemas.py  test_persistence.py  test_registry.py  test_settings.py  test_skills.py  test_supervisor.py
