[project]
name = "bmo"
version = "0.1.0"
description = "Modular AI Assistant"
authors = [
    {name = "Wanderson Fontes",email = "wancf19@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "langchain (>=1.0.8,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.0.3,<2.0.0)",
    "litellm (>=1.80.0,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-litellm (>=0.3.2,<0.4.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
